# trip_optimization

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  main.py  pylintrc  pyproject.toml  ruff.toml
g0_utils/: config.yml  utils.py
g1_distance_calculation/: DistanceMatrixCalculator.py
g2_data_processing/: DataProcessor.py
g3_schedule_optimization/: ScheduleOptimizer.py
sched_opt/: elements.py
sched_opt/data_processing/: data_processor.py
sched_opt/distance_calculation/: __init__.py  distance_matrix_calculator.py
sched_opt/g0_utils/: keys.yml  utils.py
sched_opt/g1_distance_calculation/: DistanceMatrixCalculator.py  distance_matrix_calculator.py
sched_opt/g2_data_processing/: DataProcessor.py  data_processor.py
sched_opt/g3_schedule_optimization/: ScheduleOptimizer.py  schedule_optimizer.py
sched_opt/g4_schedule_visualization/: ScheduleVisualizer.py
sched_opt/schedule_optimization/: flexible_solver.py  gurobi_helper.py  gurobi_optimizer.py  schedule_optimizer.py
sched_opt/schedule_visualization/: new_schedule_visualizer.py  schedule_visualizer.py
sched_opt/utils/: keys.yml  utils.py
