[tool.poetry]
name = "trip-optimization"
version = "0.1.0"
description = ""
authors = ["Ignacio Archondo <i.archondo@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
googlemaps = "^4.10.0"
ortools = "^9.12.4544"
matplotlib = "^3.10.1"
nbconvert = "^7.16.6"
openpyxl = "^3.1.5"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
